--- a/index.html
+++ b/index.html
@@ -1,31 +1,65 @@
 <html>
 	<head>
 		<title>Testing PixiJS Library</title>
-		<script type="text/javascript" src="http://pixijs.download/release/pixi.js"></script>
+		<script type="text/javascript" src="./src/pixi.js"></script>
 		<style>* {padding: 0; margin: 0}</style>
 
 	</head>
 	<body>
 
 		<script type="text/javascript">
-			//Create the renderer
-			var renderer = PIXI.autoDetectRenderer(256, 256);
+			
 
+			/* Makes the stage to fit the entire window 
+			
 			renderer.view.style.position = "absolute";
 			renderer.view.style.display = "block";
 			renderer.autoResize = true;
-			renderer.resize(window.innerWidth, window.innerHeight);
+			renderer.resize(window.innerWidth, window.innerHeight); */
 
 
-
+			//Create a container object called the `stage`
+			var stage = new PIXI.Container(),
+			
+			//Create the renderer
+			renderer = PIXI.autoDetectRenderer(256, 256);
+			
 			//Add the canvas to the HTML document
 			document.body.appendChild(renderer.view);
 
-			//Create a container object called the `stage`
-			var stage = new PIXI.Container();
+			//Use Pixi's built-in `loader` object to load an image
+			PIXI.loader
+			  .add("https://github.com/kittykatattack/learningPixi/raw/master/examples/images/cat.png")
+			  .on("progress", loadProgressHandler)
+			  .load(setup);
 
-			//Tell the `renderer` to `render` the `stage`
-			renderer.render(stage);
+
+			// Progress bar when loading images
+			function loadProgressHandler(){
+				console.log("loading");
+			}
+
+
+			//This `setup` function will run when the image has loaded
+			function setup() {
+
+				console.log("image loaded");
+
+				//Create the `cat` sprite from the texture
+				var cat = new PIXI.Sprite(
+				PIXI.loader.resources["https://github.com/kittykatattack/learningPixi/raw/master/examples/images/cat.png"].texture
+				);
+
+				//Add the cat to the stage
+				stage.addChild(cat);
+
+				//Render the stage   
+				renderer.render(stage);
+			}
+
+
+
+			
 		</script>
 
 	</body>
