--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 			//Use Pixi's built-in `loader` object to load an image
 			PIXI.loader
-			  .add("https://github.com/kittykatattack/learningPixi/raw/master/examples/images/cat.png")
+			  .add("img/cat.png")
 			  .on("progress", loadProgressHandler)
 			  .load(setup);
 
@@ -42,24 +42,9 @@
 
 			//This `setup` function will run when the image has loaded
 			function setup() {
-
-				console.log("image loaded");
-
-				//Create the `cat` sprite from the texture
-				var cat = new PIXI.Sprite(
-				PIXI.loader.resources["https://github.com/kittykatattack/learningPixi/raw/master/examples/images/cat.png"].texture
-				);
-
-				//Add the cat to the stage
-				stage.addChild(cat);
-
-				//Render the stage   
-				renderer.render(stage);
+				console.log("setup");
 			}
 
-
-
-			
 		</script>
 
 	</body>
