added console.log of percentage of file loaded

--- a/index.html
+++ b/index.html
@@ -35,8 +35,17 @@
 
 
 			// Progress bar when loading images
-			function loadProgressHandler(){
-				console.log("loading");
+			function loadProgressHandler(loader, resource) {
+
+				//Display the file `url` currently being loaded
+				console.log("loading: " + resource.url); 
+
+				//Display the precentage of files currently loaded
+				console.log("progress: " + loader.progress + "%"); 
+
+				//If you gave your files names as the first argument 
+				//of the `add` method, you can access them like this
+				//console.log("loading: " + resource.name);
 			}
 
 
