--- a/index.html
+++ b/index.html
@@ -23,13 +23,21 @@
 			
 			//Create the renderer
 			renderer = PIXI.autoDetectRenderer(256, 256);
+
+
+			//Defining alias for PIXI common functions
+			var Sprite = PIXI.Sprite,
+				TextureCache = PIXI.utils.TextureCache,
+				resources = PIXI.loader.resources;
+
+
 			
 			//Add the canvas to the HTML document
 			document.body.appendChild(renderer.view);
 
 			//Use Pixi's built-in `loader` object to load an image
 			PIXI.loader
-			  .add("img/cat.png")
+			  .add("https://github.com/kittykatattack/learningPixi/raw/master/examples/images/cat.png")
 			  .on("progress", loadProgressHandler)
 			  .load(setup);
 
@@ -52,8 +60,20 @@
 			//This `setup` function will run when the image has loaded
 			function setup() {
 				console.log("setup");
-			}
 
+				//Create the `cat` sprite
+				var cat = new Sprite(resources["https://github.com/kittykatattack/learningPixi/raw/master/examples/images/cat.png"].texture);
+
+				//Change the sprite's position
+				cat.x = 96;
+				cat.y = 96;
+
+				//Add the cat to the stage so you can see it
+				stage.addChild(cat);
+
+				//Render the stage
+				renderer.render(stage);
+			}
 		</script>
 
 	</body>
