--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 			//Defining alias for PIXI common functions
 			var Sprite = PIXI.Sprite,
 				TextureCache = PIXI.utils.TextureCache,
-				resources = PIXI.loader.resources;
+				resources = PIXI.loader.resources,
+				Rectangle = PIXI.Rectangle;
 
 
 			
@@ -37,7 +38,7 @@
 
 			//Use Pixi's built-in `loader` object to load an image
 			PIXI.loader
-			  .add("https://github.com/kittykatattack/learningPixi/raw/master/examples/images/cat.png")
+			  .add("http://vignette2.wikia.nocookie.net/nethack/images/6/62/Slash'Em_monster_tiles.png")
 			  .on("progress", loadProgressHandler)
 			  .load(setup);
 
@@ -59,19 +60,29 @@
 
 			//This `setup` function will run when the image has loaded
 			function setup() {
-				console.log("setup");
 
-				//Create the `cat` sprite
-				var cat = new Sprite(resources["https://github.com/kittykatattack/learningPixi/raw/master/examples/images/cat.png"].texture);
+				//Create the `tileset` sprite from the texture
+				var texture = TextureCache["http://vignette2.wikia.nocookie.net/nethack/images/6/62/Slash'Em_monster_tiles.png"];
+				console.log(texture);
 
-				//Change the sprite's position
-				cat.x = 96;
-				cat.y = 96;
+				//Create a rectangle object that defines the position and
+				//size of the sub-image you want to extract from the texture
+				var rectangle = new Rectangle(0, 0, 18, 18);
 
-				//Add the cat to the stage so you can see it
-				stage.addChild(cat);
+				//Tell the texture to use that rectangular section
+				texture.frame = rectangle;
 
-				//Render the stage
+				//Create the sprite from the texture
+				var spider = new Sprite(texture);
+
+				//Position the rocket sprite on the canvas
+				spider.x = 32;
+				spider.y = 32;
+
+				//Add the rocket to the stage
+				stage.addChild(spider);
+
+				//Render the stage   
 				renderer.render(stage);
 			}
 		</script>
